--- a/src/App.css
+++ b/src/App.css
@@ -23,3 +23,13 @@
 .App-link {
   color: #61dafb;
 }
+html, body {
+  background-color: black;
+  height: 100%;
+}
+#root {
+  justify-content: center;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
