--- a/src/patterns/PatternMaker.scss
+++ b/src/patterns/PatternMaker.scss
@@ -1,7 +1,6 @@
-svg {
-    width: 100%;
-    height: 100%;
-    g {
+symbol {
+    fill: white;
+    use {
         transform-origin: center;
     }
     .mirrorHor {
