--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-
-.App-header {
-  background-color: #000000;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-html, body {
-  background-color: black;
-  height: 100%;
-}
-#root {
-  justify-content: center;
-  height: 100%;
-  display: flex;
-  align-items: center;
+body {
+  background-color: #0e0e0e;
 }
