--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-.symbol {
-  display: none;
-}
 svg, symbol {
   overflow: visible !important;
+}
+.symbols {
+  display: none;
 }
