upgrade codice sorgente

--- a/src/index.css
+++ b/src/index.css
@@ -22,3 +22,15 @@ filter {
   --gold: hsl(45.6deg, 100%, 50%);
   --gold2: hsl(15.6deg, 100%, 50%);
 }
+@font-face {
+  font-family: Objectivity;
+  src: url('Fonts/Objectivity/Objectivity-LightSlanted.otf');
+}
+/* dovrebbe essere accopiato a Flip e apparire solo la prima volta che flip viene chiamato (rvg) */
+svg * {
+  transform-box: fill-box; transform-origin: center;
+}
+.scale {
+  transform-origin: revert;
+    transform-box: revert;
+}
